@@ -46,6 +46,36 @@ SOFTWARE.
 
 namespace etl
 {
+  namespace detail
+  {
+    //Helper: only performs the v < F check when has_lower == true ––
+    template <bool has_lower, typename U, U F>
+    struct lower_bound_impl;
+
+    // Specialisation for First != 0: enforce v >= First
+    template <typename U, U F>
+    struct lower_bound_impl<true, U, F>
+    {
+      static ETL_CONSTEXPR auto apply(U& v) ETL_NOEXCEPT -> void
+      {
+        if (v < F)
+        {
+          v = F;
+        }
+      }
+    };
+
+    // Specialisation for First == 0: no-op
+    template <typename U, U F>
+    struct lower_bound_impl<false, U, F>
+    {
+      static ETL_CONSTEXPR auto apply(U&) ETL_NOEXCEPT -> void
+      {
+        // nothing
+      }
+    };
+  } // namespace detail
+
   //***************************************************************************
   /// Provides a value that cycles between two limits.
   //***************************************************************************
@@ -113,10 +143,9 @@ namespace etl
       {
         value_ = Last;
       }
-      else if (value_ < First)
-      {
-        value_ = First;
-      }
+
+      // lower-bound clamp only if First != 0
+      detail::lower_bound_impl<(First != 0), T, First>::apply(value_);
 
       value = value_;
     }
@@ -351,7 +380,7 @@ namespace etl
     cyclic_value(T first_, T last_)
       : value(first_)
       , first_value(first_)
-      , last_value(last_) 
+      , last_value(last_)
     {
     }
 
